# barnn

./: LICENSE  README.md  pyproject.toml  requirements.txt
barnn/mol/: callbacks.py  dataset.py  model.py  module.py  utils.py
barnn/pde/: dataset.py  layers.py  models.py  modules.py  stats.py  utils.py
notebooks/: example.ipynb
scripts/: run_mol.py  run_pde.py
shell/: submit.sbatch
